--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -40,15 +40,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install libraries through HMM
         run: |
-          haxellib setup C:/haxelib
-          haxelib install hxcpp > /dev/null --quiet
-          haxelib install hmm --quiet
-          haxelib run hmm setup
-          haxelib run hmm install --quiet
-          haxelib run lime build windows
-      - name: Build the engine
-        run: |
-          haxellib setup C:/haxelib
+          haxelib setup C:/haxelib
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm setup
