--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -4,7 +4,9 @@ name:  Build CI
 on:
   push:
     branches:
+      - main
       - develop
+      - master
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
